--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </header>
 
                     <div>
-                        <button class="button1"><a class="button1a" href="#"><b>Try for free</b></a></button>
+                        <button class="button1"><a class="button1a" href="index-1.html"><b>Try for free</b></a></button>
                         <button class="button2"><a class="button2a" href="https:www.salesforce.com/form/starter/overview-demo/?d=pb">Watch demos</a></button>
                     </div>
 
@@ -830,27 +830,7 @@
             </div>
         </div>
 
-        <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card">
-                <img src="images/salesforce13.webp" class="card-img-top" class="card-image" alt="...">
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card">
-                <img src="images/salesforce14.webp" class="card-img-top" class="card-image" alt="...">
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card">
-                <img src="images/salesforce15.webp" class="card-img-top" class="card-image" alt="...">
-              </div>
-            </div>
-
-    
-          </div> -->
+       
 
           <div class="another-image">
             <img loading="lazy" src="images/salesforce16.webp" alt="background-image" width="100%">
@@ -1144,7 +1124,7 @@
         </header>
 
         <div class="Pricing">
-            <button class="button1"><a class="button1a" href="#">Try for free</a></button>
+            <button class="button1"><a class="button1a" href="index-1.html">Try for free</a></button>
         </div>
 
         <div class="test">
