--- a/index-1.html
+++ b/index-1.html
@@ -62,7 +62,7 @@
           <form class="form" id="form2">
             <div class="forms">  
               <h3>
-              Answer 5 more questions and we"ll get you 
+              Answer 5 more questions and we"ll get you
               into your free trial
             </h3>
             <label for="employees">Employees</label><br />
@@ -81,7 +81,7 @@
             ><br />
             <input type="text" placeholder="Company" class="in1" />
             <div class="down"> 
-              <label for="countries">Countries/Region</label>
+              <label for="countries">Countries/Region</label><br>
             <select name="countries" id="countries" class="in1">
               <option value="Nigeria">Nigeria</option>
             </select>
