--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Salesforce - assignment done by David Aje Paul. This website was made using HTML, CSS, and javascript">
+    <meta name="description" content="Salesforce - assignment done by David Aje-Paul. This website was made using HTML, CSS, and javascript">
     <meta name="keywords" content="Salesforce, Frontend Project">
-
+    <link rel="icon" type="image/x-icon" href="images/salesforce-logo.svg">
     <link rel="stylesheet" href="Project.css">
 <!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">   
  -->  
@@ -13,7 +13,7 @@
 
  <script src="https://kit.fontawesome.com/5574e72881.js" crossorigin="anonymous"></script>
 
- <title>Document</title>
+ <title>Salesforce: The Customer Company | Salesforce US</title>
 </head>
 <body>
 
